@@ -1,0 +1,10 @@
+DEFINED_PHASES=install prepare
+DESCRIPTION=Ravenbrook Memory Pool System
+EAPI=4
+HOMEPAGE=http://www.ravenbrook.com/project/mps/
+KEYWORDS=~x86
+LICENSE=Sleepycat
+SLOT=0
+SRC_URI=http://www.ravenbrook.com/project/mps/release/1.114.0/mps-kit-1.114.0.tar.gz
+_eclasses_=eutils	76fc3c462065bb4ca959f939e6793f94	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=5c3cbeaf480a07c81b234c62170e5776
