@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/mps
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/mps/ChangeLog,v 1.6 2013/05/15 06:58:46 patrick Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/mps/ChangeLog,v 1.7 2014/07/11 06:26:17 patrick Exp $
+
+*mps-1.114.0 (11 Jul 2014)
+
+  11 Jul 2014; Patrick Lauer <patrick@gentoo.org> +mps-1.114.0.ebuild:
+  Bump
 
   15 May 2013; Patrick Lauer <patrick@gentoo.org> mps-1.111.0.ebuild:
   Small fix to src_install
